apps/simple-restapi/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-restapi
  annotations:
    codefresh.io/app: simple-go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-restapi
  template:
    metadata:
      labels:
        app: simple-restapi
    spec:
      containers:
      - name: simple-webserver
        imagePullPolicy: Always
        image: 294232616647.dkr.ecr.us-east-1.amazonaws.com/krishnarepo/simple-restapi:develop-latest
        ports:
        - containerPort: 8080
