apps/simple-restapi/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-resapi-service
  namespace: simple-restapi
  annotations:
    app: simple-restapi-app
spec:
  type: ClusterIP
  selector:
    app: simple-restapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
