apps/simple-restapi/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-resapi-service
spec:
  type: ClusterIP
  selector:
    app: simple-restapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
