apps/simple-restapi/base/ingress.yaml
# argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-restapi-ingress
  namespace: simple-restapi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    app: simple-restapi-app
spec:
  rules:
  - host: simple-restapi.local   # Replace with your actual domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-resapi-service
            port:
              number: 8080
